# affix-grammar

./: Cargo.toml  README.md  run_tests.sh  syntax-highlighting.iro
affix-grammar-js/: Cargo.toml
affix-grammar-js/src/: lib.rs
libaffix/: Cargo.toml
libaffix/src/: fault.rs  gen.rs  lib.rs  parser.rs  semantics.rs
libaffix/src/checked/: mod.rs  resolve.rs  semantics.rs
libaffix/src/literate/: mod.rs
libaffix/src/parser/: ascii_art.rs  lex.rs  mod.rs  report.rs  space.rs  syntax.rs  typo.rs
libaffix/src/snapshot_inputs/: abbreviations.txt  ambiguous.txt  ambiguous2.txt  ambiguous3.txt  ambiguous4.txt  ambiguous5.txt  ambiguous6.txt  bad-parse.hs  binary.txt  center-embeddings.hs  characters_and_gender.txt  english_sentence.txt  inexhaustive.hs  keyword-as-ident.hs  parse_error1.hs  they.hs  unused.hs  variables-in-patterns.hs  variant_in_sentential_form.txt
libaffix/src/snapshots/: libaffix__tests__CHECKED_SNAPSHOT__inexhaustive.snap  libaffix__tests__CHECKED_SNAPSHOT__unused.snap  libaffix__tests__GEN_SNAPSHOT__abbreviations.snap  libaffix__tests__GEN_SNAPSHOT__ambiguous.snap  libaffix__tests__GEN_SNAPSHOT__ambiguous5.snap  libaffix__tests__GEN_SNAPSHOT__ambiguous6.snap  libaffix__tests__GEN_SNAPSHOT__binary.snap  libaffix__tests__GEN_SNAPSHOT__center-embeddings.snap  libaffix__tests__GEN_SNAPSHOT__characters_and_gender.snap  libaffix__tests__GEN_SNAPSHOT__english_sentence.snap  libaffix__tests__GEN_SNAPSHOT__find-unreachable.snap  libaffix__tests__GEN_SNAPSHOT__inexhaustive.snap  libaffix__tests__GEN_SNAPSHOT__they.snap  libaffix__tests__GEN_SNAPSHOT__variables-in-patterns.snap  libaffix__tests__GEN_SNAPSHOT__variant_in_sentential_form.snap  libaffix__tests__PARSE_SNAPSHOT__abbreviations.snap  libaffix__tests__PARSE_SNAPSHOT__ambiguous.snap  libaffix__tests__PARSE_SNAPSHOT__ambiguous2.snap  libaffix__tests__PARSE_SNAPSHOT__ambiguous3.snap  libaffix__tests__PARSE_SNAPSHOT__ambiguous4.snap  libaffix__tests__PARSE_SNAPSHOT__ambiguous5.snap  libaffix__tests__PARSE_SNAPSHOT__ambiguous6.snap  libaffix__tests__PARSE_SNAPSHOT__bad-parse.snap  libaffix__tests__PARSE_SNAPSHOT__binary.snap  libaffix__tests__PARSE_SNAPSHOT__center-embeddings.snap  libaffix__tests__PARSE_SNAPSHOT__characters_and_gender.snap  libaffix__tests__PARSE_SNAPSHOT__english_sentence.snap  libaffix__tests__PARSE_SNAPSHOT__find-unreachable.snap  libaffix__tests__PARSE_SNAPSHOT__inexhaustive.snap  (+13 more)
(+47 files in other folders)
