[package]
name = "affix-grammar"
version = "0.1.0"
authors = ["eignnx <eignnx@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
internship = "0.6.0"
rand = "0.7.3"
im = "14.1.0"
nom = { version = "5.1.0", features = ["regexp_macros"] }
structopt = "0.3.7"
thiserror = "1.0.11"
