[package]
name = "affix-grammar-js"
version = "0.1.5"
authors = ["eignnx <eignnx@gmail.com>"]
edition = "2018"

[workspace]

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.59"
libaffix = { path = "../libaffix" }
serde-wasm-bindgen = "0.1.3"
serde = "^1.0.59"
serde_derive = "^1.0.59"
