[package]
name = "libaffix"
version = "0.1.0"
authors = ["eignnx <eignnx@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
internship = "0.6.0"
rand = { version = "0.7.3", features = ["stdweb", "wasm-bindgen"] }
im = "14.1.0"
nom = { version = "5.1.0", features = ["regexp_macros"] }
thiserror = "1.0.11"
wasm-bindgen = "0.2.59"
serde = "^1.0.59"
serde_derive = "^1.0.59"
