[package]
name = "libaffix"
version = "0.1.0"
authors = ["eignnx <eignnx@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
internship = "0.6.0"
rand = { version = "0.7.3", features = ["stdweb", "wasm-bindgen"] }
im = { version = "14.1.0", features = ["serde"] }
nom = { version = "5.1.0", features = ["regexp_macros"] }
thiserror = "1.0.11"
wasm-bindgen = "0.2.59"
serde = "^1.0.59"
serde_derive = "^1.0.59"
pulldown-cmark = "0.7.0"
serde-wasm-bindgen = "0.1.3"
term_size = "0.3.1"
itertools = "0.9.0"

[dev-dependencies]
insta = { version = "0.16", features = ["glob"] }
assert_matches = "1.3.0"
